--- a/fatrpc-framework-core/pom.xml
+++ b/fatrpc-framework-core/pom.xml
@@ -4,13 +4,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.fatsnake</groupId>
+    <artifactId>fatrpc-framework</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <groupId>org.example</groupId>
   <artifactId>fatrpc-framework-core</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>fatrpc-framework-core</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>fatrpc-framework-core</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,9 +25,15 @@
     <jboss-marshalling-river.version>1.4.11.Final</jboss-marshalling-river.version>
     <jboss-marshalling-serial.version>1.4.11.Final</jboss-marshalling-serial.version>
     <slf4j-api.version>1.7.13</slf4j-api.version>
+    <javassist.version>3.21.0-GA</javassist.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>${javassist.version}</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -59,6 +69,12 @@
       <groupId>org.jboss.marshalling</groupId>
       <artifactId>jboss-marshalling-serial</artifactId>
       <version>${jboss-marshalling-serial.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.fatsnake</groupId>
+      <artifactId>fatrpc-framework-interface</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
