[fatrpc-framework-core][feature/05_serialize][M][C:直属领导我自己][R:二级领导还是我自己] 1.序列化层代码实现---和发送和接收

--- a/fatrpc-framework-core/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-core/src/main/resources/fatrpc.properties
@@ -2,6 +2,7 @@ fatrpc.serverPort=9093
 fatrpc.registerAddr=localhost:2181
 fatrpc.applicationName=irpc-provider
 fatrpc.proxyType=javassist
-fatrpc.routerStrategy=rotate
-
+fatrpc.router=rotate
+fatrpc.serverSerialize=fastJson
+fatrpc.clientSerialize=fastJson
 
