修改 根pom文件

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <modules>
         <module>fatrpc-framework-core</module>
+        <module>fatrpc-framework-interface</module>
     </modules>
 
     <packaging>pom</packaging>
