[fatrpc-framework-core][feature/07_SPI][M][C:直属领导我自己][R:二级领导还是我自己] 1.spi说明文档编写 2.生产者 消费者项目创建，方便测试

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <modules>
         <module>fatrpc-framework-core</module>
         <module>fatrpc-framework-interface</module>
+        <module>fatrpc-framework-provider</module>
+        <module>fatrpc-framework-consumer</module>
     </modules>
 
     <packaging>pom</packaging>
