[fatrpc-framework-core][feature/08_queue_thread][M][C:直属领导我自己][R:二级领导还是我自己] 1.队列与线程池化改造，提高性能

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 *.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/fatrpc-framework-consumer/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/fatrpc-framework-provider/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/fatrpc-framework-consumer/target/classes/META-INF/fatrpc.properties
+/fatrpc-framework-provider/target/classes/fatrpc.properties
+/fatrpc-framework-consumer/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/fatrpc-framework-provider/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
