[fatrpc-framework-core][feature/08_queue_thread][M][C:直属领导我自己][R:二级领导还是我自己] 1.代码优化，删除冗余代码

--- a/fatrpc-framework-provider/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-provider/src/main/resources/fatrpc.properties
@@ -6,3 +6,5 @@ fatrpc.proxyType=javassist
 fatrpc.router=random
 fatrpc.serverSerialize=fastJson
 fatrpc.clientSerialize=fastJson
+fatrpc.server.queue.size=513
+fatrpc.server.biz.thread.nums=257
