--- a/fatrpc-framework-core/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-core/src/main/resources/fatrpc.properties
@@ -1,8 +1,8 @@
-#fatrpc.serverPort=9093
-#fatrpc.registerAddr=localhost:2181
-#fatrpc.applicationName=irpc-provider
-#fatrpc.proxyType=javassist
-#fatrpc.router=rotate
-#fatrpc.serverSerialize=fastJson
-#fatrpc.clientSerialize=fastJson
+#default properties
+fatrpc.serverPort=9093
+fatrpc.proxyType=javassist
+fatrpc.router=random
+fatrpc.serverSerialize=fastJson
+fatrpc.clientSerialize=fastJson
+fatrpc.client.default.timeout=2
 #
