[fatrpc-framework-core][feature/09_fault-tolerant][M][C:直属领导我自己][R:二级领导还是我自己] 1.添加服务端错误返回给客户端支持

--- a/fatrpc-framework-core/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-core/src/main/resources/fatrpc.properties
@@ -4,5 +4,5 @@ fatrpc.proxyType=javassist
 fatrpc.router=random
 fatrpc.serverSerialize=fastJson
 fatrpc.clientSerialize=fastJson
-fatrpc.client.default.timeout=2
+fatrpc.client.defautl.timeout=2
 #
