--- a/fatrpc-framework-provider/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-provider/src/main/resources/fatrpc.properties
@@ -4,7 +4,7 @@ fatrpc.registerType=zookeeper
 fatrpc.applicationName=irpc-provider
 fatrpc.proxyType=javassist
 fatrpc.router=random
-fatrpc.serverSerialize=fastJson
-fatrpc.clientSerialize=fastJson
+fatrpc.serverSerialize=jdk
+fatrpc.clientSerialize=jdk
 fatrpc.server.queue.size=513
 fatrpc.server.biz.thread.nums=257
