--- a/fatrpc-framework-consumer/src/main/resources/META-INF/fatrpc.properties
+++ b/fatrpc-framework-consumer/src/main/resources/META-INF/fatrpc.properties
@@ -4,7 +4,7 @@ fatrpc.registerType=zookeeper
 fatrpc.applicationName=irpc-provider
 fatrpc.proxyType=javassist
 fatrpc.router=rotate2
-fatrpc.serverSerialize=fastJson
-fatrpc.clientSerialize=fastJson
+fatrpc.serverSerialize=jdk
+fatrpc.clientSerialize=jdk
 
 
