[fatrpc-framework-core][feature/09_fault-tolerant][M][C:直属领导我自己][R:二级领导还是我自己] 1.netty的底层bug异常排查--粘包问题

--- a/fatrpc-framework-provider/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-provider/src/main/resources/fatrpc.properties
@@ -4,7 +4,8 @@ fatrpc.registerType=zookeeper
 fatrpc.applicationName=irpc-provider
 fatrpc.proxyType=javassist
 fatrpc.router=random
-fatrpc.serverSerialize=jdk
-fatrpc.clientSerialize=jdk
+fatrpc.serverSerialize=fastJson
+fatrpc.clientSerialize=fastJson
 fatrpc.server.queue.size=513
 fatrpc.server.biz.thread.nums=257
+fatrpc.server.max.connection=100
