[fatrpc-framework-core][feature/09_fault-tolerant][M][C:直属领导我自己][R:二级领导还是我自己] 1.配置抽离

--- a/fatrpc-framework-consumer/src/main/resources/META-INF/fatrpc.properties
+++ b/fatrpc-framework-consumer/src/main/resources/META-INF/fatrpc.properties
@@ -6,5 +6,7 @@ fatrpc.proxyType=javassist
 fatrpc.router=rotate2
 fatrpc.serverSerialize=fastJson
 fatrpc.clientSerialize=fastJson
+#最大客户端响应数据包体积
+fatrpc.client.max.data.size=4096
 
 
