--- a/fatrpc-framework-provider/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-provider/src/main/resources/fatrpc.properties
@@ -9,3 +9,5 @@ fatrpc.clientSerialize=fastJson
 fatrpc.server.queue.size=513
 fatrpc.server.biz.thread.nums=257
 fatrpc.server.max.connection=100
+#最大服务端接收数据包体积
+fatrpc.server.max.data.size=4096
