[fatrpc-framework-core][feature/09_fault-tolerant][M][C:直属领导我自己][R:二级领导还是我自己] 1.优化改善代码

--- a/fatrpc-framework-consumer/src/main/resources/META-INF/fatrpc.properties
+++ b/fatrpc-framework-consumer/src/main/resources/META-INF/fatrpc.properties
@@ -4,8 +4,8 @@ fatrpc.registerType=zookeeper
 fatrpc.applicationName=irpc-provider
 fatrpc.proxyType=javassist
 fatrpc.router=rotate2
-fatrpc.serverSerialize=fastJson
-fatrpc.clientSerialize=fastJson
+fatrpc.serverSerialize=jdk
+fatrpc.clientSerialize=jdk
 #最大客户端响应数据包体积
 fatrpc.client.max.data.size=4096
 
