[fatrpc-framework-core][feature/sringboot_starter][M][C:直属领导我自己][R:二级领导还是我自己] 1.创建注解

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>fatrpc-framework-interface</module>
         <module>fatrpc-framework-provider</module>
         <module>fatrpc-framework-consumer</module>
+        <module>fatrpc-framework-spring-starter</module>
     </modules>
 
     <packaging>pom</packaging>
