--- a/fatrpc-framework-provider/pom.xml
+++ b/fatrpc-framework-provider/pom.xml
@@ -11,12 +11,57 @@
 
     <artifactId>fatrpc-framework-provider</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <fatrpc-framework-core.version>1.0-SNAPSHOT</fatrpc-framework-core.version>
+        <fatrpc-framework-spring-starter.version>1.0-SNAPSHOT</fatrpc-framework-spring-starter.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.fatsnake</groupId>
             <artifactId>fatrpc-framework-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>${fatrpc-framework-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fatsnake</groupId>
+            <artifactId>fatrpc-framework-spring-starter</artifactId>
+            <version>${fatrpc-framework-spring-starter.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.13.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
