[fatrpc-framework-core][feature/10_sringboot_starter][M][C:直属领导我自己][R:二级领导还是我自己] 1.代码初步完成，待测试  fix

--- a/fatrpc-framework-consumer/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-consumer/src/main/resources/fatrpc.properties
@@ -1,10 +1,10 @@
-irpc.registerAddr=localhost:2181
-irpc.registerType=zookeeper
-irpc.applicationName=fatrpc-consumer
-irpc.proxyType=javassist
-irpc.router=rotate
-irpc.serverSerialize=jdk
-irpc.clientSerialize=jdk
+fatrpc.registerAddr=localhost:2181
+fatrpc.registerType=zookeeper
+fatrpc.applicationName=fatrpc-consumer
+fatrpc.proxyType=javassist
+fatrpc.router=rotate
+fatrpc.serverSerialize=jdk
+fatrpc.clientSerialize=jdk
 #\u6700\u5927\u5BA2\u6237\u7AEF\u54CD\u5E94\u6570\u636E\u5305\u4F53\u79EF
-irpc.client.max.data.size=4096
+fatrpc.client.max.data.size=4096
 
