--- a/fatrpc-framework-provider/src/main/resources/fatrpc.properties
+++ b/fatrpc-framework-provider/src/main/resources/fatrpc.properties
@@ -1,7 +1,7 @@
 fatrpc.serverPort=9093
 fatrpc.registerAddr=localhost:2181
 fatrpc.registerType=zookeeper
-fatrpc.applicationName=irpc-provider
+fatrpc.applicationName=fatrpc-provider
 fatrpc.proxyType=javassist
 fatrpc.router=random
 fatrpc.serverSerialize=jdk
@@ -9,5 +9,5 @@ fatrpc.clientSerialize=jdk
 fatrpc.server.queue.size=513
 fatrpc.server.biz.thread.nums=257
 fatrpc.server.max.connection=100
-#最大服务端接收数据包体积
+#\u6700\u5927\u670D\u52A1\u7AEF\u63A5\u6536\u6570\u636E\u5305\u4F53\u79EF
 fatrpc.server.max.data.size=4096
